[package]
name = "test-book"
version = "0.1.0"
edition = "2021"
description = "Test runner for mdbook"

[dev-dependencies]
skeptic = "0.13.7"

[build-dependencies]
skeptic = "0.13.7"

[dependencies]
argon2 = "0.5.2"
data-encoding = "2.4.0"
hmac = "0.12.1"
password-hash = "0.5.0"
pbkdf2 = { version = "0.12.2", features = ["simple"] }
scrypt = { version = "0.11.0", features = ["simple"] }
sha2 = "0.10.8"
